# cli-tools

./: .gitignore  pyproject.toml
src/cli_tools/: __init__.py  main.py
src/cli_tools/cli/: aggr.py  beep.py  build_docs.py  clean.py  commit.py  context.py  context_design_docs.py  design_requirements_docs.py  document_utils.py  generate_command.py  repo_check.py  review_reports.py
src/cli_tools/inference/: __init__.py  fireworks.py  tera.py
tests/: test_clean.py  test_commit.py  test_design_requirements_docs.py  test_review_reports.py
