[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tools"
version = "0.1.0"
description = "Global CLI tools for AI-powered workflows"
authors = [
    {name = "Timeline Team"}
]
requires-python = ">=3.10"

dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "httpx>=0.26.0,<0.29.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
tool = "cli_tools.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
